<resources>
    <string name="app_name">Smashit Live</string>
    <string name="facebook_app_id">989903808129041</string>
    <string name="fb_login_protocol_scheme">fb989903808129041</string>
    <string name="server_client_id">897587571357-j8flo514651bmovph5u948a2tt768sd7.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="font_family">Rubik</string>
    <string name="number_picker_formatter">%02d</string>
    <string name="select_video_text">Select 1 min video</string>
    <string name="video_length_validation">Video should be of minimum 3 seconds</string>
    <string name="app_provider">com.demo.videotrimmer.provider</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="msg_camera_storage_setting">Linebully requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="settings">Settings</string>
    <string name="msg_permission_rationale">Linebully requires to access camera service so you can upload best pictures, Turn on camera and storage permission from setting.</string>
    <string name="choose_video">Choose Video</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_Video">Take Video</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="choose_image">Choose Image</string>
    <string name="take_video">Take Video</string>
    <string name="ok">Ok</string>
    <string name="email">Phone Number / Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="signin">LOGIN</string>
    <string name="guest">OR Login as Guest User</string>
    <string name="donthaveaccount">Don’t have an account?</string>
    <string name="signup">SIGN UP</string>
    <string name="forgotpwd">Forgot Password</string>
    <string name="enterphone">Phone Number</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="entermail">Email</string>
    <string name="getstarted">GET STARTED</string>
    <string name="SignUp">Sign Up</string>
    <string name="newpwd">Set New Password</string>
    <string name="enternewpwd">Enter New Password</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Save">Save</string>
    <string name="OTP">OTP</string>
    <string name="otpsent">OTP sent to you email check your email</string>
    <string name="continuebtn">CONTINUE</string>
    <string name="resendotp">Resend OTP in</string>
    <string name="displayname">Display Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="country">Country</string>
    <string name="language">Language</string>
    <string name="chooselaung">Choose Preferred Language</string>
    <string name="category">Category</string>
    <string name="choosecat">Choose Preferred Category</string>
    <string name="walletbal">Wallet Balance</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>
    <string name="create">Created</string>
    <string name="created">Created</string>
    <string name="liked">Liked</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="posts">Posts</string>
    <string name="enterusername">Enter Username</string>
    <string name="city">City</string>
    <string name="enternumber">Enter Number</string>
    <string name="updateprofile">Update Profile</string>
    <string name="you">You</string>
    <string name="love">Love</string>
    <string name="earnings">Earnings</string>
    <string name="claim">Claim</string>
    <string name="hashtags">#HashTags</string>
    <string name="share">Share</string>
    <string name="views">0 Posts</string>
    <string name="wallet">Wallet</string>
    <string name="viewtransaction">View Transaction History</string>
    <string name="vasmash">VA-Smash</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="desofvideo">Description of video</string>
    <string name="whocanview">Who can view this video</string>
    <string name="Public">Public</string>
    <string name="contentpreference">Content Preferences</string>
    <string name="submit">Submit</string>
    <string name="timer">Timer</string>
    <string name="flip">Flip</string>
    <string name="filters">Filters</string>
    <string name="speed">Speed</string>
    <string name="effects">Effects</string>
    <string name="done">done</string>
    <string name="sticker">sticker</string>
    <string name="text">Text</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="startshooting">Start Shooting</string>
    <string name="addsounds">Add Sounds</string>
    <string name="trending">Trending</string>
    <string name="upload">upload</string>
    <string name="editvideo">Edit Video</string>
    <string name="selectvideo_text">select_video_text</string>
    <string name="usesound">Use this sound</string>
    <string name="sounds">Original Sound</string>
</resources>