<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingClass.ContentPreference">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/launchingback"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"

            >
            <Button
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:background="@drawable/backbtn"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:onClick="finishActivity"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contentpreference"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:id="@+id/login_tittle"
                android:fontFamily="@font/rubik_medium"
                />
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/laung"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:fontFamily="@font/rubik"
                android:background="@drawable/homeback"
                />
            <Button
                android:id="@+id/cate"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/category"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/rubik"
                android:background="@color/transparent"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:layout_gravity="top"
            android:gravity="top"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border"
            >
            <ListView
                android:id="@+id/lang_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/listdivider"
                android:dividerHeight="4px"
                />
            <ListView
                android:id="@+id/catlist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/listdivider"
                android:dividerHeight="4px"
                android:visibility="gone"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:gravity="center">
            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:id="@+id/submitbtn"
                android:background="@drawable/btn_bg_selector"
                />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>