<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/launchingback"
        android:weightSum="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_gravity="center"
            >
            <Button
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:background="@drawable/backbtn"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:onClick="finishActivity"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="30dp"
                android:textColor="@color/white"
                android:id="@+id/pop_title"
                android:fontFamily="@font/rubik_medium"
                />
            <View
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="#fff"
                android:layout_marginTop="10dp"
                android:layout_gravity="left"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choosecat"
                android:textColor="@color/hintcolor"
                android:fontFamily="@font/rubik"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:background="@drawable/border"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >

            <ListView
                android:id="@+id/cat_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#333842"
                android:dividerHeight="4px"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
            <Button
                android:id="@+id/pop_cat_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/Save"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/categoryback"
                android:textColor="@color/white"
                android:fontFamily="@font/rubik_medium"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>